# opentargets-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  api.md  conf.py  index.md  quickstart.md
examples/: basic_usage.py  batch_query.py  demo.ipynb  demo_executed.ipynb  network_analysis.py
src/opentargets/: __init__.py  _async_client.py  _async_graphql.py  _cache.py  _graphql.py  _retry.py  cli.py  client.py  exceptions.py  mcp_server.py  models.py
src/opentargets/_queries/: __init__.py  association.py  disease.py  drug.py  search.py  target.py
tests/: conftest.py  test_async_client.py  test_cache.py  test_cli.py  test_client.py  test_disk_cache.py  test_exceptions.py  test_graphql.py  test_mcp_server.py  test_models.py  test_new_endpoints.py  test_retry.py
