[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentargets-py"
version = "0.1.0"
description = "Unofficial community-maintained Python client for the Open Targets Platform GraphQL API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Göknur Arıcan", email = "gknrperiarican@gmail.com" },
]
keywords = [
    "opentargets", "bioinformatics", "drug-discovery",
    "graphql", "genomics", "target-identification",
    "python-client", "sdk"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/goknurarican/opentargets-py"
Documentation = "https://opentargets-py.readthedocs.io"
Repository = "https://github.com/goknurarican/opentargets-py"
Issues = "https://github.com/goknurarican/opentargets-py/issues"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP045"]  # Optional[X] needed for Python 3.9 Pydantic compat

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit the real API",
]

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/opentargets"]
